# em_nuclear_segmentation

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
notebooks/: Untitled.ipynb  create_training_data_from_cellmap.ipynb  em_nuclear_segmentation_notebook.ipynb
src/em_nuclear_segmentation/: __init__.py  _em_nuclear_segmentation.py  config.py  evaluate.py  finetune.py  plot_training_stats.py  predict.py  split_dataset.py  train.py
src/em_nuclear_segmentation/_tests/: test_module.py
src/em_nuclear_segmentation/datasets/: nuclei_dataset.py  preprocess_input_patches.py
src/em_nuclear_segmentation/models/: unet.py
src/em_nuclear_segmentation/utils/: accuracy_metrics.py  export_training_summary.py  predict_utils.py  transform.py
