[metadata]
name = em_nuclear_segmentation
version = 0.0.1
description = A repo to train a unet for unuclear segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GesaLoof/em_nuclear_segmentation
author = Gesa Loof
author_email = gesaloof@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GesaLoof/em_nuclear_segmentation/issues
    Documentation = https://github.com/GesaLoof/em_nuclear_segmentation#README.md
    Source Code = https://github.com/GesaLoof/em_nuclear_segmentation
    User Support = https://github.com/GesaLoof/em_nuclear_segmentation/issues

[options]
packages = find:
install_requires =
    jupyter
    bumpver
    torch>=2.0
    torchvision
    numpy
    matplotlib
    scikit-image
    albumentations
    tqdm
    Pillow
    pandas
    sklearn

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

# run pip install em_nuclear_segmentation[pinned] to get exact versions used during development/testing
pinned = 
    python==3.13.5
    jupyter==1.1.1
    bumpver==2025.1131
    torch==2.7.1
    torchvision==0.22.1
    numpy==2.2.6
    matplotlib==3.10.3
    scikit-image==0.25.2
    albumentations==2.0.8
    tqdm==4.67.1
    Pillow==11.3.0
    pandas==2.3.1
    scikit-learn==1.7.1
    fibsem-tools==7.0.5

[options.package_data]
* = *.yaml
